# f1-forecast

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  VERSION_HISTORY.md  gen_preview.py  index.html  pyproject.toml  requirements-dev.txt
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  data-refresh.yml
data/: constructor_standings.csv  explore.py  fetch_data.py  forecasts_rows.csv
tests/: test_data.py
