[project]
name = "f1-forecast"
version = "0.1.0"
description = "F1 Constructors Championship forecasting using Prophet, ARIMA, and LSTM"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
keywords = ["f1", "formula1", "forecasting", "machine-learning", "time-series"]
dependencies = [
    "requests",
    "pandas",
    "matplotlib",
    "seaborn",
    "fastf1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "pytest>=8.0",
    "pre-commit>=3.7",
]
dashboard = [
    "streamlit>=1.35",
]
models = [
    "prophet>=1.1",
    "statsmodels>=0.14",
    "tensorflow>=2.16",
    "scikit-learn>=1.5",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# E = pycodestyle errors, F = pyflakes, I = isort, UP = pyupgrade
select = ["E", "F", "I", "UP"]
# E501 = line too long (handled by formatter), E402 = module level import at top
ignore = ["E501", "E402"]
# Allow unused imports in __init__.py files
per-file-ignores = { "__init__.py" = ["F401"] }

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"
